src/components/win-modal/win-modal.styles.scss
.win-modal {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
  // color: #73ffca;
  color: var(--secondaryText);

  .modal-content {
    width: 50%;
    max-width: 700px;
    // background-color: #009485;
    background-color: var(--menu);
    border-radius: 20px;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
      rgba(0, 0, 0, 0.08) 0px 15px 12px;
    font-size: 2rem;

    // 3D hover
    transform-style: preserve-3d;
    perspective: 1000px;

    // Animation dependencies
    opacity: 0;
    transform: scale(0.5, 0.5) rotate(0deg);
    // transition: transform cubic-bezier(0.3, 0.1, 0.55, 1.7) 550ms,
    //   opacity cubic-bezier(0.3, 0.1, 0.55, 1.7) 450ms;

    // Show animation
    &.in.visible {
      opacity: 1;
      transform: translateY(-0.05em) scale(1, 1) rotate(0deg);
      animation-name: popShow;
      animation-duration: 550ms;
      // animation-timing-function: cubic-bezier(0.3, 0.1, 0.55, 1.7);
    }

    .win-modal-inner-container {
      display: flex;
      justify-content: center;
      flex-direction: column;
      padding: 4rem;
      transform: translateZ(50px);

      // fix the jagged animation by forcing hardware acceleration
      backface-visibility: hidden;
      -webkit-backface-visibility: hidden;
      // perspective: 1000;

      &::before {
        content: '';
        position: absolute;
        top: 3rem;
        right: 3rem;
        bottom: 3rem;
        left: 3rem;
        border-radius: 15px;
        // border: dotted 4px #ffff00;
        border: dotted 4px var(--menuBorder);
        transform: translateZ(50px);
        // perspective: 1000;
        z-index: -1;
      }
    }
  }

  .modal-header {
    padding: 0.1rem;
    // color: #ffff00;
    color: var(--secondaryText);
    font-size: 2rem;

    // 3D hover
    transform: translateZ(40px);
    text-shadow: rgba(0, 0, 0, 0.3) 2px 2px 15px;
  }

  .modal-body {
    padding: 0.2rem;
    display: flex;
    flex-direction: column;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;

    // 3D hover
    transform: translateZ(40px);
    text-shadow: rgba(0, 0, 0, 0.2) 5px 5px 10px;

    span {
      padding: 0.3rem;
      // color: #ffff00;
      color: var(--primaryText);
    }
  }

  .modal-footer {
    padding: 2rem;

    // 3D hover
    transform: translateZ(40px);
  }

  .modal-close-btn {
    cursor: pointer;
    display: inline-block;
    text-decoration: none;
    font-size: 1.5em;
    margin: 0 0.5em;
    background: none;
    border: none;
    // color: #73ffca;
    color: var(--primaryText);
    transition: transform cubic-bezier(0.175, 0.885, 0.32, 1.175) 250ms;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    perspective: 1000;
    transform: translateZ(0);
    text-shadow: rgba(0, 0, 0, 0.2) 5px 5px 10px;

    &:hover {
      // color: #ffff00;
      color: var(--hoverText);
      //   text-shadow: rgba($color: #000000, $alpha: 0.5) 1px 1px 5px 1px;
      transform: translateY(-0.09em) scale(1.2, 1.2) rotate(1.8deg);
      text-shadow: rgba(0, 0, 0, 0.3) 10px 10px 20px;
    }

    &:active,
    :focus {
      transform: scale(0.98, 0.98);
    }
  }
}

@keyframes popShow {
  0% {
    transform: scale(0.5, 0.5) rotate(0deg);
  }
  50% {
    transform: translateY(-0.15em) scale(1.2, 1.2) rotate(1.4deg);
  }
  100% {
    transform: scale(1, 1) rotate(0deg);
  }
}

@keyframes firework {
  0% {
    transform: translate(-50%, 30vh);
    width: 0.5vmin;
    opacity: 0;
  }
  50% {
    width: 0.5vmin;
    opacity: 1;
  }
  100% {
    width: 45vmin;
    opacity: 0;
  }
}

.firework,
.firework::before,
.firework::after {
  --top: 40vh;
  content: '';
  position: absolute;
  top: 0;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 0.5vmin;
  opacity: 0;
  aspect-ratio: 1;
  background:
    /* random backgrounds */ radial-gradient(
        circle,
        var(--title) 0.2vmin,
        #0000 0
      )
      50% 00%,
    radial-gradient(circle, var(--title) 0.3vmin, #0000 0) 00% 50%,
    radial-gradient(circle, var(--title) 0.5vmin, #0000 0) 50% 99%,
    radial-gradient(circle, var(--title) 0.2vmin, #0000 0) 99% 50%,
    radial-gradient(circle, var(--title) 0.3vmin, #0000 0) 80% 90%,
    radial-gradient(circle, var(--title) 0.5vmin, #0000 0) 95% 90%,
    radial-gradient(circle, var(--title) 0.5vmin, #0000 0) 10% 60%,
    radial-gradient(circle, var(--title) 0.2vmin, #0000 0) 31% 80%,
    radial-gradient(circle, var(--title) 0.3vmin, #0000 0) 80% 10%,
    radial-gradient(circle, var(--title) 0.2vmin, #0000 0) 90% 23%,
    radial-gradient(circle, var(--title) 0.3vmin, #0000 0) 45% 20%,
    radial-gradient(circle, var(--title) 0.5vmin, #0000 0) 13% 24%;
  background-size: 0.5vmin 0.5vmin;
  background-repeat: no-repeat;
  animation: firework 2s normal;
}

.firework::before {
  transform: translate(-50%, -50%) rotate(25deg) !important;
}

.firework::after {
  transform: translate(-50%, -50%) rotate(-37deg) !important;
}

